--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="icon.png">
 
     <style>
+        
         h1 {
             text-align: center;
             font-size: 300%;
@@ -37,6 +38,22 @@
         ul {
             margin: 1% 3%;
             font-size: 125%;
+        }
+        td, th, tr {
+            padding: 3px 10px;
+            text-align: justify;
+            border: 2px solid black;
+        }
+        table {
+            width: 90%;
+            margin: auto;
+            border-collapse: collapse;
+        }
+        thead {
+            background-color: lightgray;
+        }
+        tbody {
+            background-color: white;
         }
 
     </style>
@@ -72,21 +89,28 @@
             <tbody>
                 <tr>
                     <td>Hipertrofia</td>
+                    <td>Aumento da massa muscular</td>
+                    <td>Cargas e número de repetições moderados</td>
                 </tr>
                 <tr>
                     <td>Força</td>
+                    <td>Desenvolvimento da força máxima</td>
+                    <td>Cargas muito pesadas e menor número de repetições</td>
                 </tr>
                 <tr>
                     <td>Resistência</td>
+                    <td>Desenvolvimento de resistência muscular</td>
+                    <td>Cargas mais leves e maior número de repetições</td>
                 </tr>
                 <tr>
                     <td>Potência</td>
+                    <td>Gerar força de forma rápida e explosiva</td>
+                    <td>Exercícios explosivos como saltos e arremessos</td>
                 </tr>
             </tbody>
-            <tfoot>
-
-            </tfoot>
         </table>
+
+        <p><strong>Hipertrofia</strong> </p>
     </main>
 
     
