--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             }
 
             h2 {
-                margin-top: 5%;
+                margin-top: 7%;
                 text-align: center;
                 font-size: 200%;
                 text-shadow: 2px 2px grey;
@@ -165,7 +165,7 @@
             <img class="imagem-direita" src="imagens/bitelo.png" title="Bitelo competindo na Eslováquia com 350kg no levantamento terra">
 
             <p>
-                Treinos com o foco em <strong>Força</strong> visam aumentar o desempenho em movimentos pesados e exigem
+                Treinos com o foco em <strong>força</strong> visam aumentar o desempenho em movimentos pesados e exigem
                 estímulos intensos com cargas elevadas e poucas repetições. Esse tipo de treino é fundamental para esportes
                 como o powerlifting, no qual os atletas testam seus limites em exercícios
                 super pesados. Um exemplo notável
